--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-librosa==0.10.0.post2
-nltk==3.8.1
-numpy==1.24.3
-openai_whisper==20230314
-opencv_python==4.8.0.76
-opensmile==2.4.2
-py_feat==0.6.0
-torch==2.0.1
-transformers==4.31.0
-yake==0.4.8
+librosa
+nltk
+numpy
+opencv_python
+opensmile
+py_feat
+torch
+transformers
+yake
